# dynaphos

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: grid_coords.yaml  grid_coords_dipole.yaml  grid_coords_dipole_valid.yaml  grid_coords_gabor_rand.yaml  grid_coords_gabor_small.yaml  grid_coords_squares.yaml  grid_coords_squares_utah.yaml  grid_coords_valid.yaml  grid_coords_valid_2.yaml  grid_coords_valid_3.yaml  params.yaml
dynaphos/: cortex_models.py  image_processing.py  plotting.py  simulator.py  utils.py
examples/: demo_simulator.ipynb  demo_webcam.py  readme.md
test/: benchmark.pkl  benchmark.py  test_all.py
test/data/: Fernandez_2021_fig6A.csv  coordinates_dipole.npz  coordinates_monopole.npz  coordinates_wedge-dipole.npz  fernandez_activation_fit.npy  fernandez_brightness_fit.npy  output.npy  phosphenes_donders.npy  results_dynamics  results_dynamics.pkl  sigma.npy  stimulus.npy  trace.npy  valid_electrodes.npy  z_full_view.npy
